--- a/index.html
+++ b/index.html
@@ -28,25 +28,23 @@
             </nav>
         </div>
     </header>
+    <section class="profile__center-container">
+        <div class="profile__image-container">
+            <img src="images/punga.jpg" alt="ma photo">
+        </div>
 
-    <section class="profile">
-        <div class="profile__center-container">
-            <div class="profile__image-container">
-                <img src="images/punga.jpg" alt="ma photo">
-            </div>
-            <div class="profile__content">
-                <h1>Hello</h1>
-                <div class="profile__card">
-                    <p class="profile__text--strong">A propos de moi</p>
-                    <p class="profile__text--size">
-                        je suis <span class="profile__text--strong">Ezechiel Punga</span> un apprenant en developpement web passioné doté d'une créativité débordante  et d'un talent pour concrretiser  des idées  en experience numeriques interactives.                
-                    </p>
-                    <ul class="profile__list">
-                        <li class="profile__list-item--orange profile__list-item--button"><a href="cv.html" >CV</a></li>
-                        <li class="profile__list-item--red profile__list-item--button"><a href="project.html">Projects</a></li>
-                        <li class="profile__list-item--blue profile__list-item--button"><a href="contact.html">Contact</a></li>
-                    </ul>
-                </div>
+        <div class="profile__content">
+            <h1>Hello</h1>
+            <div class="profile__card">
+                <p class="profile__text--strong">A propos de moi</p>
+                <p class="profile__text--size">
+                    je suis <span class="profile__text--strong">Ezechiel Punga</span> un apprenant en developpement web passioné doté d'une créativité débordante  et d'un talent pour concrretiser  des idées  en experience numeriques interactives.                
+                </p>
+                <ul class="profile__list">
+                    <li class="profile__list-item--orange profile__list-item--button"><a href="cv.html" >CV</a></li>
+                    <li class="profile__list-item--red profile__list-item--button"><a href="project.html">Projects</a></li>
+                    <li class="profile__list-item--blue profile__list-item--button"><a href="contact.html">Contact</a></li>
+                </ul>
             </div>
         </div>
     </section>
