--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
                 <div>
                     <ul class="header__navigation-content">
                         <li class="header__navigation-list"><a href="cv.html">CV</a></li>
-                        <span class="separator"></span>
+                        <li class="separator"></li>
                         <li class="header__navigation-list"><a href="project.html">Projects</a></li>
-                        <span class="separator"></span>
+                        <li class="separator"></li>
                         <li class="header__navigation-list"><a href="contact.html">Contact</a></li>
                     </ul>
                 </div>
