--- a/project.html
+++ b/project.html
@@ -20,9 +20,9 @@
                     <div>
                         <ul class="header__navigation-content">
                             <li class="header__navigation-list"><a href="cv.html">CV</a></li>
-                            <span class="separator"></span>
+                            <li class="separator"></li>
                             <li class="header__navigation-list"><a href="project.html">Projects</a></li>
-                            <span class="separator"></span>
+                            <li class="separator"></li>
                             <li class="header__navigation-list"><a href="contact.html">Contact</a></li>
                         </ul>
                     </div>
@@ -51,7 +51,7 @@
                         Panther noir est un site qui parle que de moi, mes motivitations, mes projets réalisé 
                         mes ambitions, mes passions 
                     </p>
-                    <img src="images/Document (6).png" alt="" class="image">
+                    <img src="images/Document(6).png" alt="screenshot_site" class="image">
                </div>
             </div>
         </section>
