--- a/contact.html
+++ b/contact.html
@@ -20,9 +20,9 @@
                     <div>
                         <ul class="header__navigation-content">
                             <li class="header__navigation-list"><a href="cv.html">CV</a></li>
-                            <span class="separator"></span>
+                            <li class="separator"></li>
                             <li class="header__navigation-list"><a href="project.html">Projects</a></li>
-                            <span class="separator"></span>
+                            <li class="separator"></li>
                             <li class="header__navigation-list"><a href="contact.html">Contact</a></li>
                         </ul>
                     </div>
@@ -48,7 +48,7 @@
                     </div>
                 </div>
                 <div>
-                    <form action="">
+                    <form>
                         <div class="">
                             <div class="contact__form-group">
                                 <label for="first_name">First Name</label> <br>
