--- a/cv.html
+++ b/cv.html
@@ -20,9 +20,9 @@
                     <div>
                         <ul class="header__navigation-content">
                             <li class="header__navigation-list"><a href="cv.html">CV</a></li>
-                            <span class="separator"></span>
+                            <li class="separator"></li>
                             <li class="header__navigation-list"><a href="project.html">Projects</a></li>
-                            <span class="separator"></span>
+                            <li class="separator"></li>
                             <li class="header__navigation-list"><a href="contact.html">Contact</a></li>
                         </ul>
                     </div>
@@ -112,13 +112,13 @@
                 </div>
         </section>
         <hr>
-        <section class="wrapper">
+        <div class="wrapper">
             <p class="wrapper__detail-text-strong">Langue</p>
             <ul>
                 <li>Français</li>
                 <li>Anglais</li>
             </ul>
-        </section>
+        </div>
         <footer>
         <div class="footer">
             <h5>Telephone</h5>
