modification du style de la page cv

--- a/cv.html
+++ b/cv.html
@@ -8,7 +8,7 @@
     <title>CV</title>
 </head>
 <body>
-    <div>
+    <div class="container">
         <header>
             <div class="header__nav">
                 <nav>
@@ -118,6 +118,9 @@
                 <li>Français</li>
                 <li>Anglais</li>
             </ul>
+        </div>
+        <div class="container">
+            <hr>
         </div>
         <footer>
         <div class="footer">
