modification du style de la page contact

--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,7 @@
     <title>Contact</title>
 </head>
 <body>
-    <div>
+    <div class="container">
         <header>
             <div class="header__nav">
                 <nav>
@@ -30,17 +30,18 @@
             </div>
         </header>
         <section class="contact__section">
-            <h3>Contact</h3>
+            
             <div class="contact__info">
-                <div>
-                    
-                    <div>
+
+                <div class="contact-info--block">
+                    <h3>Contact</h3>
+                    <div class="contact__info--detail">
                        <h4>Phone</h4>
                        <p>
                             0818264090
                        </p>
                     </div>
-                    <div>
+                    <div class="contact__info--detail">
                         <h4>Email</h4>
                         <p>
                             pungaezechiel@gmail.com
@@ -49,7 +50,7 @@
                 </div>
                 <div>
                     <form>
-                        <div class="">
+                        <div class="contact">
                             <div class="contact__form-group">
                                 <label for="first_name">First Name</label> <br>
                                 <input type="text" name="first_name" id="first_name">
@@ -59,7 +60,7 @@
                                 <input type="text" name="last_name" id="last_name">
                             </div>
                         </div>
-                        <div class="">
+                        <div class="contact">
                             <div class="contact__form-group">
                                 <label for="email">Email</label> <br>
                                 <input type="email" name="email" id="email">
@@ -69,7 +70,7 @@
                                 <input type="text" name="password" id="password">
                             </div>
                         </div>
-                        <div class="">
+                        <div class="contact">
                             <div class="contact__form-message">
                                 <div>
                                     <label for="message">Message</label> 
